# NovaBar

./: CHANGELOG.md  README.md  meson.build
src/: main.vala  panel.vala
src/globalmenu/: menubar.vala
src/indicators/battery/: battery.vala
src/indicators/bluetooth/: bluetooth.vala
src/indicators/controlcenter/: controlcenter.vala
src/indicators/datetime/: datetime.vala
src/indicators/network/: network.vala
src/indicators/notifications/: notifications.vala
src/indicators/sound/: sound.vala
src/settings/: settings.vala
